# Tasklit

./: .gitignore  CMakeLists.txt  README.md
helpers/: Qt Tasks API.postman_collection.json
source/: CMakeLists.txt  main.cpp
source/http/: CMakeLists.txt  IRouter.hpp  TaskRouter.cpp  TaskRouter.hpp
source/model/: CMakeLists.txt  tag.hpp  task.hpp
source/service/: CMakeLists.txt  ITaskService.hpp  TaskServiceImpl.cpp  TaskServiceImpl.hpp
source/storage/: CMakeLists.txt  IStorage.hpp  SQLiteStorage.cpp  SQLiteStorage.hpp  SQLiteStorageImpl.cpp  SQLiteStorageImpl.hpp
source/utils/: CMakeLists.txt  ErrorHandler.hpp  JsonUtils.hpp  Logger.cpp  Logger.hpp  TaskPatch.hpp  json_utils.hpp
src/: main.cpp
